--- a/Data Structure/191215_링크드리스트_파이썬실습.ipynb
+++ b/Data Structure/191215_링크드리스트_파이썬실습.ipynb
@@ -314,6 +314,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data, next = None):\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
+    "\n",
+    "class NodeMgmt:\n",
+    "    def __init__(self, data):\n",
+    "        self.head = Node(data)\n",
+    "    \n",
+    "    def add(self, data):\n",
+    "        if self.head == '':\n",
+    "            self.head = Node(data)\n",
+    "        else:\n",
+    "            node = self.head\n",
+    "            while node.next:\n",
+    "                node = node.next\n",
+    "            node.next = Node(data)\n",
+    "    def desc(self):\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print (node.data)\n",
+    "            node = node.next\n",
+    "    def delete(self, data):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "node = NodeMgmt(1)\n",
+    "node.add(2)\n",
+    "node.add(4)\n",
+    "node.add(3)\n",
+    "node.desc()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
