--- a/Data Structure/191215_링크드리스트_파이썬실습.ipynb
+++ b/Data Structure/191215_링크드리스트_파이썬실습.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,12 +341,29 @@
     "            print (node.data)\n",
     "            node = node.next\n",
     "    def delete(self, data):\n",
-    "        "
+    "        if self.head == '':\n",
+    "            print (\"해당 값을 가진 노드가 없습니다.\")\n",
+    "            return\n",
+    "        \n",
+    "        if self.head.data==data:\n",
+    "            temp = self.head\n",
+    "            self.head = self.head.next\n",
+    "            del temp\n",
+    "        else:\n",
+    "            node = self.head\n",
+    "            while node.next:\n",
+    "                if node.next.data == data:\n",
+    "                    temp = node.next\n",
+    "                    node.next = node.next.next\n",
+    "                    del temp\n",
+    "                    return\n",
+    "                else:\n",
+    "                    node = node.next"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,6 +383,412 @@
     "node.add(4)\n",
     "node.add(3)\n",
     "node.desc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node.delete(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "node.desc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "class NodeMgmt:\n",
+    "    def __init__(self, data):\n",
+    "        self.head = Node(data)\n",
+    "    \n",
+    "    def add(self, data):\n",
+    "        if self.head == '':\n",
+    "            self.head = Node(data)\n",
+    "        else:\n",
+    "            node = self.head\n",
+    "            while node.next:\n",
+    "                node = node.next\n",
+    "            node.next = Node(data)\n",
+    "\n",
+    "    def desc(self):\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print (node.data)\n",
+    "            node = node.next\n",
+    "\n",
+    "    def delete(self, data):\n",
+    "        if self.head == '':\n",
+    "            print ('해당 값을 가진 노드가 없습니다.')\n",
+    "            return\n",
+    "        if self.head.data == data: # 경우의 수1: self.head를 삭제해야할 경우 - self.head를 바꿔줘야 함\n",
+    "            temp = self.head # self.head 객체를 삭제하기 위해, 임시로 temp에 담아서 객체를 삭제했음\n",
+    "            self.head = self.head.next # 만약 self.head 객체를 삭제하면, 이 코드가 실행이 안되기 때문!\n",
+    "            del temp\n",
+    "        else:\n",
+    "            node = self.head\n",
+    "            while node.next: # 경우의 수2: self.head가 아닌 노드를 삭제해야할 경우\n",
+    "                if node.next.data == data:\n",
+    "                    temp = node.next\n",
+    "                    node.next = node.next.next       \n",
+    "                    del temp                         \n",
+    "                    pass                             \n",
+    "                else:\n",
+    "                    node = node.next\n",
+    "                    \n",
+    "    def search_node(self, data):\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            if node.data == data:\n",
+    "                return node\n",
+    "            else:\n",
+    "                node = node.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 테스트\n",
+    "node_mgmt = NodeMgmt(0)\n",
+    "for data in range(1, 10):\n",
+    "    node_mgmt.add(data)\n",
+    "\n",
+    "node = node_mgmt.search_node(4)\n",
+    "print (node.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 다양한 링크드 리스트 구조"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "기존의 단방향 링크드 리스트의 단점을 보완한 링크드 리스트 구조\n",
+    "이중 연결 리스트라고도 함\n",
+    "양방향으로 연결이 되어있어서 노트 탐색이 앞,뒤 양쪽으로 모두 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data, prev=None, next=None):\n",
+    "        self.prev = prev\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
+    "class NodeMgmt:\n",
+    "    def __init__(self,data):\n",
+    "        self.head = Node(data)\n",
+    "        self.tail = self.head\n",
+    "        \n",
+    "    def insert(self, data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            self.tail = self.head\n",
+    "        else:   #첫번째 노드가 있다면\n",
+    "            node = self.head\n",
+    "            while node.next:\n",
+    "                node = node.next\n",
+    "            new = Node(data)\n",
+    "            node.next = new\n",
+    "            new.prev = node\n",
+    "            self.tail = new\n",
+    "    def desc(self):\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print(node.data)\n",
+    "            node = node.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "double_linked_list = NodeMgmt(0)\n",
+    "for data in range(1,10):\n",
+    "    double_linked_list.insert(data)\n",
+    "double_linked_list.desc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data, prev=None, next=None):\n",
+    "        self.prev = prev\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
+    "class NodeMgmt:\n",
+    "    def __init__(self,data):\n",
+    "        self.head = Node(data)\n",
+    "        self.tail = self.head\n",
+    "        \n",
+    "    def insert(self, data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            self.tail = self.head\n",
+    "        else:   #첫번째 노드가 있다면\n",
+    "            node = self.head\n",
+    "            while node.next:\n",
+    "                node = node.next\n",
+    "            new = Node(data)\n",
+    "            node.next = new\n",
+    "            new.prev = node\n",
+    "            self.tail = new\n",
+    "    def desc(self):\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print(node.data)\n",
+    "            node = node.next\n",
+    "    def search_from_head(self, data):\n",
+    "        if self.head == Node:\n",
+    "            return False\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            if node.data == data:\n",
+    "                return node\n",
+    "            else:\n",
+    "                node = node.next\n",
+    "        return False\n",
+    "    def search_from_tail(self, data):\n",
+    "        if self.head == Node:\n",
+    "            return False\n",
+    "        node = self.tail\n",
+    "        while node:\n",
+    "            if node.data == data:\n",
+    "                return node\n",
+    "            else:\n",
+    "                node = node.prev\n",
+    "        return False\n",
+    "    def insert_before(self, data, before_data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            return True\n",
+    "        else:\n",
+    "            node = self.tail\n",
+    "            while node.data != before_data: # 데이터가 있는지 확인\n",
+    "                node = node.prev\n",
+    "                if node == None:\n",
+    "                    return False\n",
+    "            new = Node(data)\n",
+    "            before_new = node.prev\n",
+    "            before_new.next = new\n",
+    "            new.prev = before_new\n",
+    "            new.next = node\n",
+    "            node.prev = new\n",
+    "            return True\n",
+    "    def insert_after(self,data,after_data):\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data)\n",
+    "            return True\n",
+    "        else: #첫번째 노드가 있는 경우\n",
+    "            node = self.head\n",
+    "            while node.data != after_data:\n",
+    "                node = node.next\n",
+    "                if node == None:\n",
+    "                    return False\n",
+    "            new = Node(data) # 추가할 노트\n",
+    "            after_new = node.next # 다음노드\n",
+    "            after_new.before = new\n",
+    "            new.next = after_new\n",
+    "            new.prev = node\n",
+    "            node.next = new\n",
+    "            return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "double_linked_list = NodeMgmt(0)\n",
+    "for data in range(1,10):\n",
+    "    double_linked_list.insert(data)\n",
+    "double_linked_list.desc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_3 = double_linked_list.search_from_head(3)\n",
+    "node_3.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_3 = double_linked_list.search_from_tail(8)\n",
+    "node_3.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1.5\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "double_linked_list.insert_before(1.5,2)\n",
+    "double_linked_list.desc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1.5\n",
+      "2\n",
+      "2.5\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "double_linked_list.insert_after(2.5,2)\n",
+    "double_linked_list.desc()"
    ]
   },
   {
