191222자료구조스택

--- a/Data Structure/해쉬 테이블 실습.ipynb
+++ b/Data Structure/해쉬 테이블 실습.ipynb
@@ -293,6 +293,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "해쉬 테이블의 가장 큰 문제 '충돌': 한개 이상의 데이터가 동일한 해쉬주소에 저장 되야 할 경우 (충돌,Collision,해쉬충돌)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Open Hashing(개방해슁): "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 해쉬 테이블 저장공간 외의 공간을 활용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - Chaining 기법\n",
+    "  - 충돌이 일어날 경우 링크드 리스트로 데이터를 추가로 뒤에 연결시켜서 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash_table = list([0 for i in range(8)])\n",
+    "\n",
+    "def get_key(data):\n",
+    "    return hash(data)\n",
+    "\n",
+    "def hash_function(key):\n",
+    "    return key % 8\n",
+    "\n",
+    "def save_data(data, value):\n",
+    "    index_key = get_key(data)\n",
+    "    hash_address = hash_function(index_key)\n",
+    "    if hash_table[hash_address]!=0:\n",
+    "        for index in range(len(hash_table[hash_address])):\n",
+    "            if hash_table[hash_address][index][0] == index_key:\n",
+    "                hash_table[hash_address][index][1] = value\n",
+    "                return\n",
+    "        hash_table[hash_address].append([index_key.value])\n",
+    "    hash_table[hash_address] = value\n",
+    "    \n",
+    "def read_date(data):\n",
+    "    hash_address = hash_function(get_key(data))\n",
+    "    return hash_table[hash_address]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Closs Hashing(패쇄해슁): "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 해쉬 테이블 안의 저장공간을 활용"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
