--- a/Data Structure/자료구조 - 트리 (SJH).ipynb
+++ b/Data Structure/자료구조 - 트리 (SJH).ipynb
@@ -35,6 +35,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 이진 탐색 트리 (Binary Search Tree) \n",
+    "\n",
+    "#### 링크드 리스트 만들기\n",
+    "\n",
+    " - 노드 클래스 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.left = None\n",
+    "        self.right = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이진 탐색 트리에 데이터 넣기\n",
+    " - 이진 탐색 트리 조건에 부합하게 데이터를 넣기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NondMgmt:\n",
+    "    def __init__(self,head):\n",
+    "        self.head = head\n",
+    "    def insert(self, value):\n",
+    "        self.current_node = self.head\n",
+    "        while True:\n",
+    "            if value < self.current_node.value:\n",
+    "                if self.current_node.left != None:\n",
+    "                    self.current_node = self.current_node.left\n",
+    "                else:\n",
+    "                    self.current_node.left = Node(value)\n",
+    "                    break\n",
+    "            else:\n",
+    "                if self.current_node.right != None:\n",
+    "                    self.current_node = self.current_node.right\n",
+    "                else:\n",
+    "                    self.current_node.right = Node(value)\n",
+    "                    break                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head = Node(1)\n",
+    "BST = NondMgmt(head)\n",
+    "BST.insert(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이진 탐색 트리 탐색"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NondMgmt:\n",
+    "    def __init__(self,head):\n",
+    "        self.head = head\n",
+    "    def insert(self, value):\n",
+    "        self.current_node = self.head\n",
+    "        while True:\n",
+    "            if value < self.current_node.value:\n",
+    "                if self.current_node.left != None:\n",
+    "                    self.current_node = self.current_node.left\n",
+    "                else:\n",
+    "                    self.current_node.left = Node(value)\n",
+    "                    break\n",
+    "            else:\n",
+    "                if self.current_node.right != None:\n",
+    "                    self.current_node = self.current_node.right\n",
+    "                else:\n",
+    "                    self.current_node.right = Node(value)\n",
+    "                    break                    \n",
+    "                    \n",
+    "    def search(self, value):\n",
+    "        self.current_node = self.head\n",
+    "        while self.current_node:\n",
+    "            if self.current_node.value == value:\n",
+    "                return True\n",
+    "            elif value < self.current_node.value:\n",
+    "                self.current_node = self.current_node.left\n",
+    "            else:\n",
+    "                self.current_node = self.current_node.right\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head = Node(1)\n",
+    "BST = NondMgmt(head)\n",
+    "BST.insert(2)\n",
+    "BST.insert(3)\n",
+    "BST.insert(0)\n",
+    "BST.insert(4)\n",
+    "BST.insert(8)\n",
+    "BST.insert(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BST.search(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BST.search(7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이진 탐색 트리 삭제\n",
+    " - 매우 복잡하다.\n",
+    "   - 경우의 수를 나눠서 작성하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
